exercise-8/deny-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-egress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
